--- a/composer.json
+++ b/composer.json
@@ -28,17 +28,22 @@
     }
   },
   "require": {
-    "php": ">=7.1",
-    "composer/installers": "~1.0",
-    "illuminate/view": "~5.6",
-    "illuminate/config": "~5.6"
+    "php": ">=7.4",
+    "composer/installers": "~2.2.0",
+    "illuminate/view": "~8.81",
+    "illuminate/config": "~8.81"
   },
   "require-dev": {
-    "squizlabs/php_codesniffer": "~3.3.1"
+    "squizlabs/php_codesniffer": "~3.5"
   },
   "scripts": {
     "test": [
       "phpcs --ignore=vendor --extensions=php --standard=PSR2 ."
     ]
+  },
+  "config": {
+    "allow-plugins": {
+      "composer/installers": true
+    }
   }
 }
