--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     }
   },
   "require": {
-    "php": ">=7.4",
+    "php": "^7.4 | ^8.0",
     "composer/installers": "~2.2.0",
     "illuminate/view": "~8.81",
     "illuminate/config": "~8.81"
